# websocket_service

./: Cargo.toml  README.MD
service/: Cargo.toml
service/src/: client.rs  lib.rs  message.rs  server.rs
src/: client.rs  lib.rs  macros.rs  message.rs  retry.rs  server.rs  sync_client.rs  sync_server.rs  tokio_server.rs  ws_client_service.rs  ws_error.rs  ws_message.rs  ws_service.rs
websocket_derive/: Cargo.toml
websocket_derive/src/: lib.rs  message_object.rs  symbol.rs
