[package]
name = "service"
version = "0.2.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[features]
default = ["client", "server",  "json"]
client = []
server = []
binary = ["dep:bitcode"]
json = ["dep:serde", "dep:serde_json", "dep:base64"]
flexbuffers = ["dep:serde", "dep:flexbuffers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
url="2.5.0"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
serde = {version = "1.0.196", features = ["derive"], optional = true}
serde_json = {version="1.0.113", optional = true}
once_cell="1.17.1"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "test-util", "io-std"] }
tokio-tungstenite="0.23.1"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
#flatbuffers = "23.5.26"
flexbuffers = {version ="2.0.0", optional = true}
anyhow="1.0.81"
bitcode = {version = "0.6.0", optional = true}
base64 = {version = "0.13.1", optional = true}
#websocket_derive = {path = "../websocket_derive"}
