[package]
name = "service"
version = "0.2.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[features]
default = ["client", "server",  "json"]
client = []
server = []
binary = ["dep:bitcode"]
json = ["dep:serde", "dep:serde_json", "dep:base64"]
flexbuffers = ["dep:serde", "dep:flexbuffers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["http"]}
serde = {version = "1.0.196", features = ["derive"], optional = true}
serde_json = {version="1.0.117", optional = true}
once_cell="*"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "test-util", "io-std"] }
tokio-tungstenite="0.24.0"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
#flatbuffers = "23.5.26"
flexbuffers = {version ="2.0.0", optional = true}
anyhow="1.0.89"
bitcode = {version = "0.6.3", optional = true}
base64 = {version = "0.13.1", optional = true}
#websocket_derive = {path = "../websocket_derive"}
